--- a/Android-HC05/app/src/main/res/layout/activity_main.xml
+++ b/Android-HC05/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
             android:gravity="center"
             android:textColor="#FEFEFF"
             android:text="@string/device"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:textStyle="bold" >
         </TextView>
     </TableRow>
@@ -38,28 +38,30 @@
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="20dp"
             android:id="@+id/device"
             android:layout_column="1"
-            android:editable="true"
             android:text="@string/device_name"
             android:textAlignment="center"
             android:textColor="#000000"
             android:gravity="center_vertical|center"
-            android:width="120dp"
+            android:width="100dp"
             android:typeface="monospace"
             android:layout_marginRight="20dp"/>
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Connect"
+            android:layout_marginEnd="20dp"
+            android:text="@string/connect"
             android:id="@+id/btn_connect"
             android:layout_column="2"
             android:typeface="normal"
             android:width="60dp"
-            android:onClick="clicks"
+            android:onClick="connectDevice"
             android:textStyle="bold"
-            android:layout_marginRight="20dp"/>
+            android:layout_marginRight="20dp"
+            android:textAllCaps="false"/>
 
     </TableRow>
 
@@ -80,7 +82,7 @@
             android:gravity="center"
             android:textColor="#FEFEFE"
             android:text="@string/message"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:textStyle="bold" >
         </TextView>
     </TableRow>
@@ -90,30 +92,28 @@
         android:layout_height="match_parent">
 
         <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
+            android:layout_marginEnd="20dp"
             android:id="@+id/message"
             android:layout_column="1"
-            android:editable="true"
             android:textAlignment="center"
             android:textColor="#000000"
             android:gravity="center_vertical|center"
-            android:width="120dp"
+            android:width="100dp"
             android:typeface="monospace"
-            android:layout_marginRight="20dp"
             android:hint="@string/message"/>
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:text="@string/send"
             android:id="@+id/btn_send"
             android:layout_column="2"
             android:typeface="normal"
             android:width="60dp"
-            android:onClick="clicks"
+            android:onClick="sendMessage"
             android:textStyle="bold"
-            android:layout_marginRight="20dp"/>
+            android:layout_marginRight="20dp"
+            android:layout_marginEnd="20dp"
+            android:textAllCaps="false"/>
 
     </TableRow>
 
@@ -121,7 +121,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp">
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp">
 
 
         <TextView
@@ -131,7 +132,7 @@
 
             android:id="@+id/textReceive"
             android:textColor="#000000"
-            android:textSize="17dp"/>
+            android:textSize="17sp"/>
     </TableRow>
 
 
